--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-language: node_js
+language: javascript
 
 cache: npm
-
-node_js:
-  - '12'
 
 after_script:
   - codeclimate-test-reporter < coverage/lcov.info
