--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assetmanager",
   "version": "1.0.0",
-  "description": "Lightwight library for loading and unloading image, video, audio and data assets",
+  "description": "Lightweight library for loading and unloading image, video, audio and data assets",
   "main": "dist/index.js",
   "scripts": {
     "dev": "npm run dev:ts",
