--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assetmanager",
+  "name": "simple-asset-manager",
   "version": "1.0.0",
   "description": "Lightweight library for loading and unloading image, video, audio and data assets",
   "main": "dist/index.js",
