--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "name": "Richard Heuser",
     "email": "richard.heuser@mediamonks.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mediamonks/assetmanager.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.17.0",
@@ -29,5 +33,8 @@
   },
   "engines": {
     "node": ">=12"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
